tampilan id jenis

--- a/Tugas_2_Kelompok_4/Views/Shared/_LayoutAdmin.cshtml
+++ b/Tugas_2_Kelompok_4/Views/Shared/_LayoutAdmin.cshtml
@@ -81,7 +81,7 @@
                 </a>
             </li><!-- End Jenis Paket Page Nav -->
             <li class="nav-item">
-                <a class="nav-link collapsed" asp-controller="Peminjaman" asp-action="Index">
+                <a class="nav-link collapsed" asp-controller="Pengambilan" asp-action="Index">
                     <i class="bi bi-person"></i>
                     <span>Pengambilan Paket</span>
                 </a>
