--- a/Tugas_2_Kelompok_4/Views/JenisPaket/Create.cshtml
+++ b/Tugas_2_Kelompok_4/Views/JenisPaket/Create.cshtml
@@ -21,7 +21,7 @@
                             </div>
                             <br />
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary">Simpan</button>
+                                <button type="submit" class="btn btn-primary">Simpan</button>z
                             </div>
                         </form>
                     </div>
